✨ Add more CSS files + 🎨 Change the intro design
✨ Added icons in Contact Me section
✨ Graph CSS style
🎨 Moved Letter style in its own CSS file
🎨 Updated some colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,7 @@
-@font-face {
-	font-family: LucyRose;
-	src: url('./fonts/LucyRosePERSONAL-Regular.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: Lato;
-	src: url('./fonts/Lato-Regular.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: Lato;
-	src: url('./fonts/Lato-Bold.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: Lato;
-	src: url('./fonts/Lato-Italic.ttf') format('truetype');
-	font-weight: normal;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: Lato;
-	src: url('./fonts/Lato-BoldItalic.ttf') format('truetype');
-	font-weight: bold;
-	font-style: italic;
-}
-
-.letter {
-	background-color: #f9f3e7;
-}
-
-.letter h1 {
-	font-family: LucyRose;
-	text-align: center;
-	color: #65160a;
-	border-bottom: dotted;
-	border-width: 2px;
-	border-color: #ff7493;
-}
-
-.letter h2 {
-	font-family: LucyRose;
-	text-align: center;
-	color: #ff7493;
-	border-bottom: dotted;
-	border-width: 2px;
-	border-color: #65160a;
-}
-
-.letter h3, .letter h4, .letter h5, .letter h6 {
-	font-family: Lato;
-	font-weight: bold;
-	text-align: Left;
-	color: #65160a;
-}
-
-.letter pre, .letter p {
-	color: #b8634b;
-	text-align: left;
-	font-family: Lato;
-}
-
-.fern {
-	background-color: #1fc2ac;
-	color: white;
+.fullpage {
+	background-color: white;
+	height: 100vh;
+	box-sizing: border-box;
 }
 
 /* References:
