--- a/css/graph-style.css
+++ b/css/graph-style.css
@@ -1,4 +1,4 @@
-.graph {
+.graph-pink {
 	background-color: #ffffff;
 	background-image:  linear-gradient(#fec9cf 1.7px, transparent 1.7px), linear-gradient(to right, #fec9cf 1.7px, #ffffff 1.7px);
 	background-size: 34px 34px;
@@ -8,6 +8,22 @@
 	font-size: 18px;
 }
 
-.graph h1, .graph h2, .graph h3, .graph h4, .graph h5, .graph h6 {
+.graph-pink h1, .graph-pink h2, .graph-pink h3, .graph-pink h4, .graph-pink h5, .graph-pink h6 {
+	font-family: 'Bebas Neue', cursive;
+}
+
+
+.graph-green {
+	background-color: #ffffff;
+	background-image:  linear-gradient(#00ffd3 1.7px, transparent 1.7px), linear-gradient(to right, #00ffd3 1.7px, #ffffff 1.7px);
+	background-size: 34px 34px;
+	color: #2d686c;
+
+	font-family: 'Montserrat', sans-serif;
+	font-size: 18px;
+}
+
+
+.graph-green h1, .graph-green h2, .graph-green h3, .graph-green h4, .graph-green h5, .graph-green h6 {
 	font-family: 'Bebas Neue', cursive;
 }
